# rust-cookbook

./: .gitignore
1-algorithms/gen-rand-numbers-1/: Cargo.toml
1-algorithms/generate-rand-nums-within-range-2/: Cargo.toml
1-algorithms/generate-random-num-given-distr-3/: Cargo.toml
1-algorithms/generate-random-num-given-distr-3/src/: main.rs
1-algorithms/generate-random-vals-custom-type-4/: Cargo.toml
1-algorithms/rand-pwd-alphanumeric-chars-5/: Cargo.toml
1-algorithms/rand-pwd-user-defined-set-6/: Cargo.toml
1-algorithms/sort-vector-float-8/: Cargo.toml
1-algorithms/sort-vector-int-7/: Cargo.toml
1-algorithms/sort-vector-structs-9/: Cargo.toml
2-command-line/ansi-terminal-2/: Cargo.toml
2-command-line/parse-command-line-args-1/: Cargo.toml
3-compression/decompress-remove-prefix-3/: Cargo.toml
3-compression/decompress-remove-prefix-3/src/: main.rs
3-compression/decompress-tarball-1/: Cargo.toml
4-concurrency/calculate-sha256-sum-of-iso-files-concurrently-5/: Cargo.toml
4-concurrency/create-a-parallel-pipeline-2/: Cargo.toml
4-concurrency/draw-fractal-dispatching-work-to-thread-pool-6/: Cargo.toml
4-concurrency/generate-jpg-thumbnails-in-parallel-11/: Cargo.toml
4-concurrency/maintain-global-mutable-state-4/: Cargo.toml
4-concurrency/map-reduce-in-parallel-10/: Cargo.toml
4-concurrency/mutate-elements-of-array-in-parallel-7/: Cargo.toml
4-concurrency/pass-data-between-two-threads-3/: Cargo.toml
4-concurrency/search-items-using-given-predicate-in-paralle-9/: Cargo.toml
4-concurrency/spawn-a-short-lived-thread-1/: Cargo.toml
(+22 files in other folders)
