[package]
name = "generate-random-num-given-distr-3"
version = "0.1.0"
authors = ["frankhart <siddharthadhar.soumen@srmuniv.edu.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_distr = "0.4.0"
rand = "0.8.3"