[package]
name = "decompress-remove-prefix-3"
version = "0.1.0"
authors = ["frankhart <siddharthadhar.soumen@srmuniv.edu.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.20"
tar = "0.4.33"
error-chain = "0.12.4"